--- a/TasksMVC/Views/Shared/_Layout.cshtml
+++ b/TasksMVC/Views/Shared/_Layout.cshtml
@@ -42,12 +42,17 @@
     </div>
 
     <footer class="border-top footer text-muted">
-        <div class="container">
+        <div class="container d-flex" style="justify-content: space-between">
+            <div>
             &copy; 2024 - TasksMVC - <a asp-area="" asp-controller="Home" asp-action="Privacy">Privacy</a>
+            </div>
+            <partial name="_ChangeLanguage" />
         </div>
     </footer>
+    <partial name="_translationsJS" />
     <script src="~/lib/jquery/dist/jquery.min.js"></script>
     <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/knockout/3.5.0/knockout-min.js"></script>
     <script src="~/js/site.js" asp-append-version="true"></script>
     @await RenderSectionAsync("Scripts", required: false)
 </body>
