--- a/TasksMVC/Views/Shared/_translationsJS.cshtml
+++ b/TasksMVC/Views/Shared/_translationsJS.cshtml
@@ -2,4 +2,6 @@
 @inject IViewLocalizer localizer
 
 <script>
+	const resourceNotFound = "@localizer["El recurso solicitado no fue encontrado"]";
+	const unexpectedError = "@localizer["Ha ocurrido un error con su solicitud"]";
 </script>
